fixed header lock icon alignment

--- a/src/components/newco-header/sass/_newco-header.scss
+++ b/src/components/newco-header/sass/_newco-header.scss
@@ -137,11 +137,6 @@
   }
   .newco-searchbtn {
     justify-content: flex-end;
-    @include bootstrap-mobile{
-          background-color: #fff;
-          top: -5px;
-          padding: 0px 15px;
-    }
     .navsearch {
       position: relative;
       padding: 1px 2px;
