--- a/src/sass/global/_mixins.scss
+++ b/src/sass/global/_mixins.scss
@@ -2029,12 +2029,6 @@ $properties: (margin, padding);
                   }
                 }
               }
-              .newco-clientlogin a::after {
-                top:30px;
-                @include bootstarp-md-max{
-                  top:35px;
-                }
-              }
             }
           }
           .informa-header-copyright {
